## Makefile.am -- Process this file with automake to produce Makefile.in
highlighterdir = $(lsrcdir)/highlighter
highlighterhdir = $(includedir)/CLucene/highlighter
 
libclucene_contrib_la_SOURCES  += $(highlighterdir)/Encoder.cpp
libclucene_contrib_la_SOURCES  += $(highlighterdir)/Formatter.cpp
libclucene_contrib_la_SOURCES  += $(highlighterdir)/Fragmenter.cpp
libclucene_contrib_la_SOURCES  += $(highlighterdir)/Highlighter.cpp
libclucene_contrib_la_SOURCES  += $(highlighterdir)/QueryScorer.cpp
libclucene_contrib_la_SOURCES  += $(highlighterdir)/QueryTermExtractor.cpp
libclucene_contrib_la_SOURCES  += $(highlighterdir)/SimpleFragmenter.cpp
libclucene_contrib_la_SOURCES  += $(highlighterdir)/SimpleHTMLEncoder.cpp
libclucene_contrib_la_SOURCES  += $(highlighterdir)/SimpleHTMLFormatter.cpp
libclucene_contrib_la_SOURCES  += $(highlighterdir)/TextFragment.cpp
libclucene_contrib_la_SOURCES  += $(highlighterdir)/TokenGroup.cpp
libclucene_contrib_la_SOURCES  += $(highlighterdir)/TokenSources.cpp
libclucene_contrib_la_SOURCES  += $(highlighterdir)/WeightedTerm.cpp

highlighterh_HEADERS = $(highlighterdir)/*.h
